--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div><a href="#">Щось</a></div>
+        <div style="height: 300px; display: flex; justify-content: center; align-items: center;background-color: antiquewhite;">
+            <a href="#" style="padding-left: 50px;background-color: aqua;">Щось</a><span>не те</span>
+        </div>
     </body>
 </html>
